# udacity-mlops-mlflow-project

./: .gitignore  MLproject  README.md  conda.yml  environment.yml  main.py
components/: README.md  setup.py
components/get-data/: MLproject  conda.yml  run.py
components/get_data/: conda.yml  run.py
components/test-regression-model/: MLproject  conda.yml  run.py
components/test_regression_model/: conda.yml  run.py
components/train-val-test-split/: MLproject  conda.yml  run.py
components/train_val_test_split/: conda.yml  run.py
components/wandb-utils/: README.md  pyproject.toml
components/wandb-utils/src/wandb_utils/: __init__.py  log_artifact.py
components/wandb_utils/: __init__.py  log_artifact.py
conf/: config.yaml
cookie-mlflow-step/{{cookiecutter.step_name}}/: MLproject  conda.yml  {{cookiecutter.script_name}}
src/check-data/: MLproject  conda.yml  conftest.py  test_data.py
src/clean-data/: MLproject  conda.yml  run.py
src/data_check/: conda.yml
src/eda/: EDA.ipynb  conda.yml
src/train-random-forest/: MLproject  conda.yml  feature_engineering.py  run.py
