[project]
name = "wandb-utils"
version = "0.2.0"
description = "Utilities for interacting with Weights and Biases and mlflow"
authors = [
  { name = "Karen Hebel", email = "karen.hebel@udacity.com" }
]
license = { file = "LICENSE" }
dependencies = [
  "wandb>=0.18.3",
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 4 - Beta",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
